# alca

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/: alca.c  alca.cpp  alca.fb.hpp  alca.fbs  cli.c  cli.h  conn.c  conn.cpp  conn.h  conn.hpp  modules.cpp  modules.hpp  utils.cpp
cli/modules/: alca.fb.hpp  alca.fbs  file.cpp  modules.hpp
docs/: MODULES.md  OVERVIEW.md  RULES.md  SENSORS.md  SEQUENCES.md
libalca/: arena.c  bytecode.c  checker.c  compiler.c  context.c  expr.c  hashmap.c  lexer.c  module.c  packet.c  parser.c  utils.c  vm.c
libalca/include/: alca.h
libalca/include/alca/: arena.h  bytecode.h  checker.h  compiler.h  context.h  defaults.h  errors.h  expr.h  lexer.h  module.h  module.list  packet.h  parser.h  types.h  utils.h  vm.h
libalca/modules/: alca_reader.h  file.c  network.c  process.c  registry.c
tests/: test.c  test.h  test_checker.c  test_compiler.c  test_lexer.c  test_parser.c  test_vm.c
tests/data/: chk_badImport.alca  chk_complexEval.alca  chk_dupRule.alca  chk_invalidOps.alca  chk_invalidSeqRule.alca  chk_invalidSequence.alca  chk_noBool.alca  chk_validRule.alca  cpl_arithmetic.alca  cpl_logicAnd.alca  cpl_module.alca  psr_complexRule.alca  psr_indexCall.alca  psr_simpleRule.alca  vm_complex.alca
